# fluxcrud

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose-dev.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  linting.yml  publish.yml  test-coverage.yml  type-checking.yml
benchmarks/: README.md  comparison.py
docs/: README.md  docs.json  index.mdx  quickstart.mdx
docs/advanced/: benchmarks.mdx  concurrency.mdx  dataloader.mdx  optimization.mdx  plugins.mdx  streaming.mdx  unit-of-work.mdx
docs/essentials/: caching.mdx  pooling.mdx  repository.mdx
examples/: README.md  helper.py
examples/00_basic_crud/: README.md  main.py
examples/01-sample-app/: fastapi_app.py  index.html
examples/01_manual_setup/: README.md  main.py
examples/02_flux_setup/: README.md  main.py
examples/03_batch_operations/: README.md  main.py
examples/04_parallel_execution/: README.md  main.py
examples/05_dataloader_n_plus_one/: README.md  main.py
fluxcrud/: __init__.py  flux.py
fluxcrud/async_patterns/: dataloader.py
fluxcrud/cache/: backends.py  manager.py
fluxcrud/core/: __init__.py  base.py  repository.py
fluxcrud/database/: drivers.py
fluxcrud/operations/: __init__.py
fluxcrud/plugins/: __init__.py  base.py
fluxcrud/query/: optimizer.py
fluxcrud/transactions/: uow.py
fluxcrud/types/: protocols.py
fluxcrud/web/: middleware.py
tests/: conftest.py
tests/e2e/: test_fastapi_advanced.py  test_fastapi_integration.py
tests/unit/: test_cache.py  test_concurrency.py  test_crud.py  test_database.py  test_database_pooling.py  test_flux.py  test_transactions.py  test_websockets.py
tests/unit/async_patterns/: test_dataloader.py
tests/unit/core/: test_repository.py  test_streaming.py
tests/unit/plugins/: test_plugins.py
tests/unit/query/: test_builder.py  test_optimizer.py
(+3 files in other folders)
